# GalacticNova

./: CMakeLists.txt  README.md  logbook.txt  ratios.txt  references.txt
GN/: CMakeLists.txt  visualizer.cpp
GN/include/: GN_Astrobject.h  GN_Point.h  visualizer.h
GN/shaders/: 3D.vs.glsl  multiTex3D.fs.glsl
GN/src/: GN_Astrobject.cpp  main.cpp  visualizer.cpp
glimac/: CMakeLists.txt
glimac/include/glimac/: BBox.hpp  Cone.hpp  FilePath.hpp  FreeflyCamera.hpp  Geometry.hpp  Image.hpp  Program.hpp  SDLWindowManager.hpp  Shader.hpp  Sphere.hpp  TrackballCamera.hpp  common.hpp  glm.hpp
glimac/src/: Cone.cpp  Geometry.cpp  Image.cpp  Program.cpp  SDLWindowManager.cpp  Shader.cpp  Sphere.cpp  tiny_obj_loader.cpp
